# junior-tracker

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile-prod  docker-compose-junior-tracker-prod.yml  docker-compose.yml  main.py  pyproject.toml  worker.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0b719f14d510_api_keys.py  553c227711bb_event_volume.py  56058c6d6eec_events_tz.py  56b253c3e830_api_keys_is_active.py  7bceeac3fc19_event_types.py  876940a7b58a_event_type_parent.py  8ec0351b55a4_event_time.py  b6b526834100_child_timezones.py  cd60fc353c7f_event_tg_message_id.py  d229134b03cc_initial_migrations.py  d3cd9130aeee_add_sleep_events_view.py  d742147b16ba_child_model.py  de41fed1a6a6_event_keywords_etc.py  e4b7b6f8e14a_child_tg_chat_id.py
docker/: entrypoint.sh  supervisord.conf
k8s/: deployment.yaml
src/: .env.example  __init__.py  config.py  db_helper.py
src/api/: __init__.py  chart.py  child.py  device.py  event.py  event_type.py  keys.py
src/auth/: users.py
src/constants/: sleep.py
src/domain/: utils.py
src/domain/services/: cycle_day_events_isolator.py  cycle_day_sleep_data.py  range_events_builder.py  sleep_summary_calculator.py
src/enums/: event_types.py
src/models/: __init__.py  access_token.py  api_key.py  base.py  child.py  event.py  event_type.py  user.py
src/repositories/: base.py  chart.py  child.py  event.py  event_type.py
src/schemas/: event.py  user.py
src/services/: api_keys.py  chart.py  child.py  daily.py  dashboard.py  event.py  tg_msg_parser.py
tests/: conftest.py
(+12 files in other folders)
